# ai-agent-test

./: pyproject.toml
src/: function_calling.py  main.py  settings.py
