[project]
name = "ai-agent"
version = "0.1.0"
description = ""
authors = [
    {name = "ppippi",email = "wjdqlsdlsp@naver.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai (>=1.70.0,<2.0.0)",
    "pydantic-settings (>=2.8.1,<3.0.0)",
    "yfinance (>=0.2.55,<0.3.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
